ks8/nao_obrigadotorio/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api
spec:
  containers:
    - name: api-container
      image: diogenesssantos/apiwhatsapp:1.0
      ports:
        - containerPort: 8080
