ks8/nao_obrigadotorio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32120
